force-app/domains/busca-cliente/main/default/objects/Asset/fields/CardBrand__c.field-meta.xml
<CustomField>
    <fullName>CardBrand__c</fullName>
    <description>Bandeira da via de cartao (ex.: Visa, Mastercard, Elo), exibida no modal de sub-selecao (Cenario 18).</description>
    <inlineHelpText>Bandeira do cartao.</inlineHelpText>
    <label>Bandeira do Cartao</label>
    <length>20</length>
    <type>Text</type>
</CustomField>