force-app/domains/busca-cliente/main/default/objects/Asset/fields/CardCategory__c.field-meta.xml
<CustomField>
    <fullName>CardCategory__c</fullName>
    <description>Categoria da via de cartao (ex.: Infinite, Platinum, Gold, Black), exibida no modal de sub-selecao (Cenario 18).</description>
    <inlineHelpText>Categoria do cartao.</inlineHelpText>
    <label>Categoria do Cartao</label>
    <length>20</length>
    <type>Text</type>
</CustomField>