force-app/domains/busca-cliente/main/default/objects/Asset/fields/ConsorcioCota__c.field-meta.xml
<CustomField>
    <fullName>ConsorcioCota__c</fullName>
    <description>Numero da cota dentro do grupo de consorcio, exibido no modal de sub-selecao (Cenario 18).</description>
    <inlineHelpText>Numero da cota no grupo.</inlineHelpText>
    <label>Cota do Consorcio</label>
    <length>10</length>
    <type>Text</type>
</CustomField>