force-app/domains/busca-cliente/main/default/objects/Asset/fields/ConsorcioGrupo__c.field-meta.xml
<CustomField>
    <fullName>ConsorcioGrupo__c</fullName>
    <description>Numero do grupo da cota de consorcio. Varias cotas podem pertencer ao mesmo grupo (Cenario 17).</description>
    <inlineHelpText>Grupo do consorcio.</inlineHelpText>
    <label>Grupo do Consorcio</label>
    <length>10</length>
    <type>Text</type>
</CustomField>