force-app/domains/busca-cliente/main/default/objects/Asset/fields/ConsorcioTipo__c.field-meta.xml
<CustomField>
    <fullName>ConsorcioTipo__c</fullName>
    <description>Tipo da cota de consorcio (Imovel, Veiculo, Rural), exibido no modal de sub-selecao (Cenario 18).</description>
    <inlineHelpText>Tipo do bem consorciado.</inlineHelpText>
    <label>Tipo de Consorcio</label>
    <length>20</length>
    <type>Text</type>
</CustomField>