force-app/domains/busca-cliente/main/default/objects/Asset/fields/Contemplacao__c.field-meta.xml
<CustomField>
    <fullName>Contemplacao__c</fullName>
    <description>Situacao de contemplacao da cota de consorcio (ex.: Contemplada, Nao contemplada), exibida no modal (Cenario 18).</description>
    <inlineHelpText>Estado de contemplacao da cota.</inlineHelpText>
    <label>Contemplacao</label>
    <length>40</length>
    <type>Text</type>
</CustomField>