force-app/domains/busca-cliente/main/default/objects/Asset/fields/ExternalContractId__c.field-meta.xml
<CustomField>
    <fullName>ExternalContractId__c</fullName>
    <description>Identificador do contrato ou vinculo na fonte corporativa de origem. Chave de upsert idempotente dos vinculos Porto Bank e Holding (RN-11, EL-11).</description>
    <externalId>true</externalId>
    <inlineHelpText>Id externo do contrato na origem. Usado como chave de upsert idempotente.</inlineHelpText>
    <label>Id Externo do Contrato</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>