force-app/domains/busca-cliente/main/default/objects/Asset/fields/HolderName__c.field-meta.xml
<CustomField>
    <fullName>HolderName__c</fullName>
    <description>Nome do portador da via (titular ou adicional), usado para distinguir itens no modal (Cenario 20).</description>
    <inlineHelpText>Nome impresso no plastico.</inlineHelpText>
    <label>Nome do Portador</label>
    <length>80</length>
    <type>Text</type>
</CustomField>