force-app/domains/busca-cliente/main/default/objects/Asset/fields/InvestClasse__c.field-meta.xml
<CustomField>
    <fullName>InvestClasse__c</fullName>
    <description>Classe da posicao de investimento (renda fixa, renda variavel, CDB, fundos), exibida no modal (Cenario 18).</description>
    <inlineHelpText>Classe do ativo de investimento.</inlineHelpText>
    <label>Classe de Investimento</label>
    <length>30</length>
    <type>Text</type>
</CustomField>