force-app/domains/busca-cliente/main/default/objects/Asset/fields/InvestProduto__c.field-meta.xml
<CustomField>
    <fullName>InvestProduto__c</fullName>
    <description>Nome do produto de investimento da posicao (ex.: CDB Porto Bank, Fundo Multimercado), exibido no modal (Cenario 18).</description>
    <inlineHelpText>Produto da posicao de investimento.</inlineHelpText>
    <label>Produto de Investimento</label>
    <length>80</length>
    <type>Text</type>
</CustomField>