force-app/domains/busca-cliente/main/default/objects/Asset/fields/IsHoldingInformative__c.field-meta.xml
<CustomField>
    <fullName>IsHoldingInformative__c</fullName>
    <description>Indica vinculo da Holding Porto Seguro de visibilidade apenas informativa, sem selecao transacional nesta jornada (RN-06, P5).</description>
    <inlineHelpText>Marcado para vinculos Holding exibidos somente para leitura.</inlineHelpText>
    <label>Holding Informativo</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>