force-app/domains/busca-cliente/main/default/objects/Asset/fields/IsTitular__c.field-meta.xml
<CustomField>
    <fullName>IsTitular__c</fullName>
    <description>Indica se a via pertence ao titular (marcado) ou a portador adicional (desmarcado), para distincao no modal (Cenario 20).</description>
    <inlineHelpText>Marcado quando a via e do titular; desmarcado para adicional.</inlineHelpText>
    <label>Via do Titular</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>