force-app/domains/busca-cliente/main/default/objects/Asset/fields/Last4__c.field-meta.xml
<CustomField>
    <fullName>Last4__c</fullName>
    <description>Ultimos 4 digitos do plastico. Armazena apenas os 4 digitos; a exibicao mascarada e responsabilidade do LWC (LGPD, sem PAN completo).</description>
    <inlineHelpText>Ultimos 4 digitos do cartao (somente digitos).</inlineHelpText>
    <label>Final do Cartao</label>
    <length>4</length>
    <type>Text</type>
</CustomField>