force-app/domains/busca-cliente/main/default/objects/Asset/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <description>Tipo de produto Porto Bank ou vinculo Holding do ativo. Valores espelham o catalogo configuravel ProductCatalog__mdt (PT, RN-12, extensibilidade sem refatoracao).</description>
    <inlineHelpText>Tipo de produto do vinculo, conforme o catalogo de produtos.</inlineHelpText>
    <label>Tipo de Produto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CARTAO</fullName>
                <default>true</default>
                <label>Cartao de Credito</label>
            </value>
            <value>
                <fullName>CONTA_DIGITAL</fullName>
                <label>Conta Digital</label>
            </value>
            <value>
                <fullName>CONSORCIO</fullName>
                <label>Consorcio</label>
            </value>
            <value>
                <fullName>INVESTIMENTOS</fullName>
                <label>Investimentos</label>
            </value>
            <value>
                <fullName>HOLDING_AUTO</fullName>
                <label>Holding Seguro Auto</label>
            </value>
            <value>
                <fullName>HOLDING_RESIDENCIAL</fullName>
                <label>Holding Seguro Residencial</label>
            </value>
            <value>
                <fullName>HOLDING_SAUDE</fullName>
                <label>Holding Saude</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>