force-app/domains/busca-cliente/main/default/objects/Asset/fields/Rentabilidade__c.field-meta.xml
<CustomField>
    <fullName>Rentabilidade__c</fullName>
    <description>Rentabilidade da posicao de investimento em formato legivel (ex.: 102% do CDI, +11,2% a.a.), exibida no modal (Cenario 18).</description>
    <inlineHelpText>Rentabilidade informada pela fonte corporativa.</inlineHelpText>
    <label>Rentabilidade</label>
    <length>40</length>
    <type>Text</type>
</CustomField>