force-app/domains/busca-cliente/main/default/objects/Asset/fields/Risco__c.field-meta.xml
<CustomField>
    <fullName>Risco__c</fullName>
    <description>Nivel de risco da posicao de investimento, exibido no modal de sub-selecao (Cenario 18).</description>
    <inlineHelpText>Nivel de risco da posicao.</inlineHelpText>
    <label>Risco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baixo</fullName>
                <default>true</default>
                <label>Baixo</label>
            </value>
            <value>
                <fullName>Moderado</fullName>
            </value>
            <value>
                <fullName>Alto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>