force-app/domains/busca-cliente/main/default/objects/Asset/fields/ValorContrato__c.field-meta.xml
<CustomField>
    <fullName>ValorContrato__c</fullName>
    <description>Valor do contrato, cota de consorcio ou posicao de investimento, exibido no hub e nos modais (Cenarios 7 e 18).</description>
    <inlineHelpText>Valor monetario do vinculo.</inlineHelpText>
    <label>Valor do Contrato</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>