force-app/domains/busca-cliente/main/default/objects/Asset/fields/Vencimento__c.field-meta.xml
<CustomField>
    <fullName>Vencimento__c</fullName>
    <description>Vencimento ou liquidez da posicao de investimento em formato legivel (ex.: Vence em 12/2027, Resgate D+1), exibido no modal (Cenario 18).</description>
    <inlineHelpText>Vencimento ou regra de resgate da posicao.</inlineHelpText>
    <label>Vencimento ou Liquidez</label>
    <length>40</length>
    <type>Text</type>
</CustomField>