force-app/domains/busca-cliente/main/default/objects/Asset/fields/ViaStatus__c.field-meta.xml
<CustomField>
    <fullName>ViaStatus__c</fullName>
    <description>Situacao da via, cota ou posicao: ativa, cancelada ou bloqueada. Itens cancelados e bloqueados permanecem listados e selecionaveis (EL-04, EL-05, Cenario 18).</description>
    <inlineHelpText>Situacao do item: itens cancelados e bloqueados continuam selecionaveis.</inlineHelpText>
    <label>Situacao da Via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ativo</fullName>
                <default>true</default>
                <label>Ativo</label>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Bloqueado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>